# embedded-ecmascript

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: test.yml
src/: grammar.pest  grammar.rs  lexical_grammar.pest  lexical_grammar.rs  lib.rs  parser.rs
src/_tokenizer/: mod.rs  names.rs  numeric.rs  punctuators.rs  space.rs
tests/: conformance_ecma262compilers.rs  smoke.rs  source_code_error.rs  test_parser.rs  test_tokenizer.rs
