[package]
name = "embedded-ecmascript"
version = "0.1.0"
authors = ["Oleg Iarygin <oleg@arhadthedev.net>"]
edition = "2021"
description = "Library to embed ECMAScript into desktop and automotive programs"
repository = "https://github.com/arhadthedev/embedded-ecmascript"
license = "MIT"
# From <https://crates.io/keywords>:
keywords = ["parser", "ecmascript", "javascript", "compiler"]
categories = ["compilers", "parser-implementations"]

[dependencies]
from-pest = "0.3.2"
pest = "2.7.10"
pest-ast = "0.3.4"
pest_derive = "2.7.10"
rstest = "0.18.2"
unicode-ident = "1.0.12"
