[package]
name = "embedded-ecmascript"
version = "0.1.0"
authors = ["Oleg Iarygin <oleg@arhadthedev.net>"]
edition = "2021"
description = "Library to embed ECMAScript into desktop and automotive programs"
repository = "https://github.com/arhadthedev/embedded-ecmascript"
license = "MIT"
# From <https://crates.io/keywords>:
keywords = ["parser", "ecmascript", "javascript", "compiler"]
categories = ["compilers", "parser-implementations"]

[dependencies]
claims = "0.7.1"
enum_dispatch = "0.3.13"
# We need <https://github.com/pest-parser/ast/pull/27> fix not available
# in crates.io yet.
from-pest = { git = "https://github.com/pest-parser/ast.git", rev = "09255d74" }
pest = "2.7.10"
# git key accepts the repo root URL and Cargo traverses the tree to find the crate
pest-ast = { git = "https://github.com/pest-parser/ast.git", rev = "09255d74" }
pest_derive = "2.7.10"
rstest = "0.18.2"
